--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,7 +27,7 @@
     }
     
     &::-webkit-scrollbar {
-        width: 20px;
+        width: 30px;
         background-color: rgb(237, 236, 236);
     }
 
